Voices proccessing routine in 5 minutes

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "license": "ISC",
   "devDependencies": {
     "@types/node": "20.8.2",
+    "@types/node-schedule": "^2.1.7",
     "gts": "^5.2.0",
     "nodemon": "^3.1.0",
     "ts-node": "^10.9.2",
