--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,15 @@
 {
   "extends": "./node_modules/gts/",
   "rules": {
-    "max-len": ["error", { "code": 140 }]
+    "max-len": [
+      "error",
+      {
+        "code": 140
+      }
+    ],
+    "object-curly-spacing": [
+      "error",
+      "always"
+    ]
   }
 }
