--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,4 @@
-TELEGRAM_TOKEN=''
-MY_TELEGRAM_ID=''
+TELEGRAM_TOKEN='aaaaa'
+MY_TELEGRAM_ID='99999'
+AWS_ACCESS_KEY='asdasdasd'
+AWS_SECRET_KEY='asdasdasd'
