Voice to text feature
* Start voice processing

* Voices proccessing routine in 5 minutes

* Start voice processing

* Voices proccessing routine in 5 minutes

* upload and transcribe voices in aws

* uploading to AWS transforming to text

* move file via controller

* small changes

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,14 @@
     "allowJs": true,
     "esModuleInterop": true,
     "module": "commonjs",
+    "baseUrl": ".",
+    "lib": [
+      "ES2021.String"
+    ],
+    "paths": {
+      "@shared/*": ["src/shared/*"],
+      "@utils/*": ["src/utils/*"]
+    }
   },
   "include": [
     "src/**/*.ts",
