--- a/package.json
+++ b/package.json
@@ -19,14 +19,18 @@
   "license": "ISC",
   "devDependencies": {
     "@types/node": "20.8.2",
+    "@types/node-schedule": "^2.1.7",
     "gts": "^5.2.0",
     "nodemon": "^3.1.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.2"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.567.0",
+    "@aws-sdk/client-transcribe": "^3.567.0",
     "axios": "^1.6.7",
     "dotenv": "^16.4.5",
+    "node-schedule": "^2.1.1",
     "telegraf": "^4.16.3",
     "typegram": "^5.2.0"
   }
